# basicpackage

./: README.md  pyproject.toml  setup.cfg
src/basicpackage_susicode.egg-info/: PKG-INFO  SOURCES.txt
src/divide/: by_three.py
src/multiply/: by_three.py
tests/: test_divide_by_three.py  test_multiply_by_three.py
